--- a/back-ultime/package.json
+++ b/back-ultime/package.json
@@ -7,11 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "md5": "^2.3.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1"
