--- a/front-ultime/package.json
+++ b/front-ultime/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
+    "get-google-fonts": "^1.2.2",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
